opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bonsai_term_examples"
bug-reports: "https://github.com/janestreet/bonsai_term_examples/issues"
dev-repo: "git+https://github.com/janestreet/bonsai_term_examples.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/bonsai_term_examples/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                  {>= "5.1.0"}
  "async"                  {= "v0.18~preview.130.76+222"}
  "bonsai"                 {= "v0.18~preview.130.76+222"}
  "bonsai_term"            {= "v0.18~preview.130.76+222"}
  "bonsai_term_components" {= "v0.18~preview.130.76+222"}
  "bonsai_term_test"       {= "v0.18~preview.130.76+222"}
  "bonsai_test"            {= "v0.18~preview.130.76+222"}
  "core"                   {= "v0.18~preview.130.76+222"}
  "core_unix"              {= "v0.18~preview.130.76+222"}
  "ppx_embed_file"         {= "v0.18~preview.130.76+222"}
  "ppx_expect"             {= "v0.18~preview.130.76+222"}
  "ppx_jane"               {= "v0.18~preview.130.76+222"}
  "dune"                   {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Some examples for bonsai_term"
description: """
Bonsai_term is a library for building reusable TUI componetns and apps
   inside an Incremental-style UI framework such as Bonsai_web, Incr_dom or
   React. This library contains some examples that you can reference on how to
   use `bonsai_term`.
"""
url {
  src:
    "https://github.com/janestreet/bonsai_term_examples/archive/63556dd30ecc87513876bc952f0778ce3f815709.tar.gz"
  checksum:
    "sha256=8242bdf4c574309c57023048724862c8c4cdd6d2315acd3944ac10a741f11ae9"
}
